feat(server): add feat create class
