# server/controllers/class.controller.js
@@ -1,20 +1,16 @@
 const ClassService = require("../services/class.service");
 class ClassController {
-    addNewClass = async (req, res) => {
+  createNewClass = async (req, res) => {
     try {
-      const {
-        name,
-        code,
-        description,
-      } = req.body;
-      const newClass = await ClassService.addNewClass({
-        name,
+      const { className, code, description } = req.body;
+      const newClass = await ClassService.createNewClass({
+        className,
         code,
         description,
       });
       res.status(200).json(newClass);
     } catch (err) {
-      res.status(404).json(err.message);
+      res.status(err.statusCode).json(err.message);
     }
   };
 }
