# server/db/class.db.js
@@ -2,29 +2,16 @@ const pool = require("../config/db");
 const Class = require("../entities/class.model");
 
 const { ErrorHandler } = require("../helpers/error");
-class ClassDB {
-  
-  addNewClass = async ({
-    name,
-    code,
-    description,
-  }) => {
-    try{
-        const newClass = await Class.create(
-            {
-                name,
-                code,
-                description,
-            },
-        );
-        return newClass;
-    }
-    
-    catch (error){
-        throw new ErrorHandler("assignmentDB error:", error);
 
-    };
-    }
+class ClassDB {
+  createNewClass = async ({ className, code, description }) => {
+    const newClass = await Class.create({
+      className,
+      code,
+      description,
+    });
+    return newClass;
+  };
 }
 
 module.exports = new ClassDB();
