# server/routers/class.router.js
@@ -1,6 +1,6 @@
 const router = require("express").Router();
 const ClassController = require('../controllers/class.controller')
 
-router.post("/create", ClassController.addNewClass);
+router.post("/create-class", ClassController.createNewClass);
 
 module.exports = router;
