# server/swagger.json
@@ -205,6 +205,28 @@
           }
         }
       }
+    },
+    "/classes/create-class": {
+      "post": {
+        "tags": ["Classes"],
+        "description": "Create a class",
+        "summary": "Create a class",
+        "parameters": [
+          {
+            "name": "class",
+            "in": "body",
+            "description": "Create a class",
+            "schema": {
+              "$ref": "#/definitions/createClass"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Create a class successfully"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -293,6 +315,22 @@
         "OTP": {
           "type": "string",
           "example": "123456"
+        }
+      }
+    },
+    "createClass": {
+      "properties": {
+        "className": {
+          "type": "string",
+          "example": "Introduction to Software"
+        },
+        "code": {
+          "type": "string",
+          "example": "CS400"
+        },
+        "description": {
+          "type": "string",
+          "example": "Meow Meow"
         }
       }
     },
